Infra/k8s/eventMgmtBus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: eventmgmtbus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventmgmtbus
  template:
    metadata:
      labels:
        app: eventmgmtbus
    spec:
      containers:
        - name: eventmgmtbus
          image: us.gcr.io/liamevault/eventmgmtbus 
---
apiVersion: v1
kind: Service
metadata: 
  name: eventmgmtbus-srv
spec:
  type: ClusterIP
  selector:
    app: eventmgmtbus
  ports:
    - name: eventmgmtbus
      protocol: TCP
      port: 3003
      targetPort: 3003
