Infra/k8s/loggingServ-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: loggingserv-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loggingserv
  template:
    metadata:
      labels:
        app: loggingserv
    spec:
      containers:
        - name: loggingserv
          image: us.gcr.io/liamevault/loggingserv 
---
apiVersion: v1
kind: Service
metadata: 
  name: loggingserv-srv
spec:
  type: ClusterIP
  selector:
    app: loggingserv
  ports:
    - name: loggingserv
      protocol: TCP
      port: 3009
      targetPort: 3009
