Infra/k8s/viewGeneratorServ-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: viewgeneratorserv-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viewgeneratorserv
  template:
    metadata:
      labels:
        app: viewgeneratorserv
    spec:
      containers:
        - name: viewgeneratorserv
          image: us.gcr.io/liamevault/viewgeneratorserv
---
apiVersion: v1
kind: Service
metadata: 
  name: viewgeneratorserv-srv
spec:
  type: ClusterIP
  selector:
    app: viewgeneratorserv
  ports:
    - name: viewgeneratorserv
      protocol: TCP
      port: 3000
      targetPort: 3000
